IBX-1048: Fixed checkbox alignment in tables (#1913)

--- a/src/bundle/Resources/public/scss/_inputs.scss
+++ b/src/bundle/Resources/public/scss/_inputs.scss
@@ -116,6 +116,10 @@
         border-radius: calculateRem(2px);
         margin-bottom: calculateRem(3px);
 
+        &.form-check-input {
+            float: none;
+        }
+
         &::after {
             content: ' ';
             position: absolute;
